--- a/src/main/resources/templates/nuevoContacto.html
+++ b/src/main/resources/templates/nuevoContacto.html
@@ -1,12 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Agregar contacto</title>
+    <style>
+        body{
+            background-color: #8d7373;
+            color: #fff;
+            margin: 0;
+            font-family: sans-serif;
+        }
+        h1{
+            text-align: center;
+        }
+        form{
+            margin: auto;
+            width: 50%;
+            padding: 20px;
+            border: 1px solid #ddd;
+        }
+        label{
+            display: block;
+        }
+        input{
+            width: 100%;
+            padding: 5px;
+            border-radius: 10px;
+        }
+        .checkbox{
+            float: left;
+        }
+        button{
+            width: 100%;
+            border: 1px solid #fff;
+            border-radius: 5px;
+            background-color: transparent;
+            color: #fff;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-    <h1>nuevo</h1>
+    <h1>Agregar nuevo contacto</h1>
+    <form action="/agenda/guardar" method="post">
+        <div>
+            <label>Nombre:</label>
+            <input type="text" name="nombre" th:value="${contacto.nombre}" required>
+        </div>
+        <div>
+            <label>Teléfono</label>
+            <input type="number" name="telefono" th:value="${contacto.telefono}" required>
+        </div>
+        <div>
+            <label>Email:</label>
+            <input type="email" name="email" th:value="${contacto.email}" required>
+        </div>
+        <div>
+            <label>Favorito:</label>
+            <input class="checkbox" type="checkbox" name="checkbox" th:value="${contacto.favorito}">
+        </div>
+        <button type="submit">Guardar</button>
+    </form>
     
 </body>
 </html>
